--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
         <h1><img src="img/logo.png" alt="Borsod Online"></h1>
 
     </header>
-<<<<<<< ours
-    <nav></nav>
-    <main>
-        
-=======
     <nav>
         <div class="links">
             <p><a href="">Kábel televízió</a></p>
@@ -33,7 +28,7 @@
 
 
         <div class="imageover">
-            <img src="img/internet.jpg" alt="">
+            <img src="img/internet.png" alt="">
             <div><p>Internet</p></div>
         </div>
         <div class="imageover">
@@ -44,7 +39,6 @@
             <img src="" alt="">
             <div><p>text</p></div>
         </div>
->>>>>>> theirs
     </main>
     <footer></footer>
 </body>
