--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
     <header>
-        <h1><img src="img/logo.png" alt="Borsod Online"></h1>
-
+        <img src="img/logo.png" alt="Borsod Online">
     </header>
     <nav>
         <div class="links">
@@ -26,18 +25,19 @@
     <main>
 
 
-
-        <div class="imageover">
-            <img src="img/internet.png" alt="">
-            <div><p>Internet</p></div>
-        </div>
-        <div class="imageover">
-            <img src="" alt="">
-            <div><p>text</p></div>
-        </div>
-        <div class="imageover">
-            <img src="" alt="">
-            <div><p>text</p></div>
+        <div class="flex">
+            <div class="imageover">
+                <img src="img/internet.png" alt=""> <!--https://videohive.net/item/abstract-matrix-green-digital-internet-social-network-background-/22690788-->
+                <div><a href="">Internet</a></div>
+            </div>
+            <div class="imageover">
+                <img src="img/stock tv_square.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fliving-room-tv&psig=AOvVaw2pybXiendQ6UX1MPl7HCFG&ust=1649315144765000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLikxenv_vYCFQAAAAAdAAAAABAE-->
+                <div><a href="">Televízió</a></div>
+            </div>
+            <div class="imageover">
+                <img src="img/qmark.png" alt=""> <!--https://commons.wikimedia.org/wiki/File:Question_Mark.svg-->
+                <div><a href="">GyIK</a></div>
+            </div>
         </div>
     </main>
     <footer></footer>
