--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div><a href="">Televízió</a></div>
             </div>
             <div class="imageover">
-                <img src="img/faq.png" alt=""> <!--https://commons.wikimedia.org/wiki/File:Question_Mark.svg-->
+                <img src="img/faq.jpg" alt=""> <!--https://commons.wikimedia.org/wiki/File:Question_Mark.svg-->
                 <div><a href="">GyIK</a></div>
             </div>
         </div>
