--- a/index.html
+++ b/index.html
@@ -23,19 +23,27 @@
         <button></button>
     </nav>
     <main>
-
-
+        <h1>Title</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, vitae porro quos laudantium officia facere aut incidunt consectetur asperiores distinctio enim nobis numquam accusamus tempore dicta unde dignissimos quam alias?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vero rem consequatur voluptatem nobis odio obcaecati dolor, quia et mollitia? Nam, qui? Natus quidem ipsam accusantium sed tenetur debitis blanditiis.</p>
+        <ul>
+            <li>lorem</li>
+            <li>ipsum</li>
+            <li>dolor</li>
+        </ul>
+        <hr>    
+        <h2 id="flexCim">További információk</h2>
         <div class="flex">
             <div class="imageover">
                 <img src="img/internet.png" alt=""> <!--https://videohive.net/item/abstract-matrix-green-digital-internet-social-network-background-/22690788-->
                 <div><a href="">Internet</a></div>
             </div>
             <div class="imageover">
-                <img src="img/stock tv_square.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fliving-room-tv&psig=AOvVaw2pybXiendQ6UX1MPl7HCFG&ust=1649315144765000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLikxenv_vYCFQAAAAAdAAAAABAE-->
+                <img src="img/borsodi_szitu.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fliving-room-tv&psig=AOvVaw2pybXiendQ6UX1MPl7HCFG&ust=1649315144765000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLikxenv_vYCFQAAAAAdAAAAABAE-->
                 <div><a href="">Televízió</a></div>
             </div>
             <div class="imageover">
-                <img src="img/qmark.png" alt=""> <!--https://commons.wikimedia.org/wiki/File:Question_Mark.svg-->
+                <img src="img/qmark.png" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Ffaq&psig=AOvVaw0ndxIwCnsT1jsDcydmLAQT&ust=1649317159591000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLCug6r3_vYCFQAAAAAdAAAAABAL-->
                 <div><a href="">GyIK</a></div>
             </div>
         </div>
