--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div><a href="">Televízió</a></div>
             </div>
             <div class="imageover">
-                <img src="img/qmark.png" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Ffaq&psig=AOvVaw0ndxIwCnsT1jsDcydmLAQT&ust=1649317159591000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLCug6r3_vYCFQAAAAAdAAAAABAL-->
+                <img src="img/faq.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Ffaq&psig=AOvVaw0ndxIwCnsT1jsDcydmLAQT&ust=1649317159591000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLCug6r3_vYCFQAAAAAdAAAAABAL-->
                 <div><a href="">GyIK</a></div>
             </div>
         </div>
