Lexend Deca Font hozzáadva

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta title="Borsod-Online">
     <title>Borsod-Online</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -16,11 +17,12 @@
     </header>
     <nav>
         <div class="links">
-            <p><a href="">Kábel televízió</a></p>
-            <p><a href="">Internet</a></p>
-            <p><a href="">Gyakori kérdések</a></p>
+            <p><a href="#" id="jelenlegi">Főoldal</a></p>
+            <p><a href="html/tel.html">Kábel televízió</a></p>
+            <p><a href="html/int.html">Internet</a></p>
+            <p><a href="html/faq.html">Gyakori kérdések</a></p>
         </div>
-        <button></button>
+        <button><i class="bi bi-list"></i></button>
     </nav>
     <main>
         <h1>Title</h1>
