--- a/html/faq.html
+++ b/html/faq.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header><img src="../img/logo.png" alt="Borsod Online"></header>
+    <nav>
+        <div class="links">
+            <p><a href="../index.html">Főoldal</a></p>
+            <p><a href="tel.html">Kábel televízió</a></p>
+            <p><a href="int.html">Internet</a></p>
+            <p><a href="#" id="jelenlegi">Gyakori kérdések</a></p>
+            <button><i class="bi bi-list"></i></button>
+        </div>
+    </nav>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
