pictogrammok és pr

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Ginál Zsolt, Zick Balázs">
     <meta name="keywords" content="Borsod, internet, kábeltv">
-    <meta title="Borsod-Online">
-    <title>Borsod-Online</title>
+    <meta title="Borsod Online">
+    <title>Borsod Online</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -23,13 +23,15 @@
         <button></button>
     </nav>
     <main>
-        <h1>Title</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, vitae porro quos laudantium officia facere aut incidunt consectetur asperiores distinctio enim nobis numquam accusamus tempore dicta unde dignissimos quam alias?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vero rem consequatur voluptatem nobis odio obcaecati dolor, quia et mollitia? Nam, qui? Natus quidem ipsam accusantium sed tenetur debitis blanditiis.</p>
+        <h1>Cégünkről</h1>
+        <p><q>Borsodi szitu, ha elmegy a neted.</q></p>
+        <p>Ha sorsod Borsod és egy megfizethető valamint megbízható szolgáltatóra van szükséged, a Borsod Online a legjobb választásod! Cégünk kimagasló minőségben nyújt kábel és digitális TV szolgéltatást, valamint a szélessávú internetcsomagjaink már üvegszál optikán is elérhetőek a zökkenőmentes fel- és letöltés érdekében. </p>
         <ul>
-            <li>lorem</li>
-            <li>ipsum</li>
-            <li>dolor</li>
+            <li>Rézszálas És Üvegszál optikás internet szolgáltatás</li>
+            <li>Analóg és Digitális Kábeltelevízió</li>
+            <li>24/7 Ügyfélszolgálat</li>
+            <li>Hiba esetén 3 órán bellüli javítási idő</li>
+
         </ul>
         <hr>    
         <h2 id="flexCim">További információk</h2>
