--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#1b5e38">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Ginál Zsolt, Zick Balázs">
     <meta name="keywords" content="Borsod, internet, kábeltv">
