faq, my little pony

--- a/html/faq.html
+++ b/html/faq.html
@@ -19,7 +19,37 @@
             <button><i class="bi bi-list"></i></button>
         </div>
     </nav>
-    <main></main>
+    <main>
+        <h1>
+            GYIK
+        </h1>
+        <ul> 
+            <h3>Ki végzi el a számítógép, illetve az internetkapcsolat beállítását?</h3>
+            <p>Amennyiben még nem vett igénybe internet szolgáltatást a Borsod Onlinetól, a létesítést végző kolléga első alkalommal segít elvégezni a szükséges alapbeállításokat. A számítógép és az internetkapcsolat további beállítását Ön tudja elvégezni. Amennyiben kérdése van, 1445-ös technikai ügyeletünk telefonszámán kollegáink készséggel állnak rendelkezésére. Honlapunkon pedig az alábbi linken tájékozódhat a beállításokkal kapcsolatban: xDSL. </p>
+        </ul>
+    <ul>
+        <h3>Mi a teendő műszaki probléma esetén?</h3>
+        <p>Technikai ügyeletünk a hét minden napján 24 órában áll rendelkezésére a 06303500420-ös telefonszámon (vezetékes- és  mobiltelefonról is díjmentesen hívható). </p>
+    </ul>
+    <ul>
+        <h3>Szereléssel jár az ADSL szolgáltatás bekötése?</h3>
+        <p>Igen, a bekötés munkálatokkal jár, de a szerelők minden esetben az ügyfél kéréseit figyelembe véve végzik el az ADSL szolgáltatását létesítését. </p>
+    </ul>
+    <ul>
+        <h3>Mit tegyek, ha nem működik a távirányító?</h3>
+        <p>
+            <ul>
+                <li>Kezdje el káromkodás közben ütögetni az eszközt!</li>
+                <li>Elképzelhető,hogy a távirányító nincs a vevőegységre (set-top-box) irányítva, kérjük,irányítsa rá! </li>
+                <li>Érdemes leellenőrizni, hogy az elemek helyesen vannak-e betéve, és kicserélni, ha szükséges! </li>
+            </ul>
+        </p>
+    </ul>
+    <ul>
+        <h3>Jár-e szereléssel, ha IPTV-szolgátatásról áttérek optikai hálózatra?</h3>
+        <p>Az optikai hálózat a rézhálózattól eltérően egy újabb, modernebb technológia. Ahogy a jelenleg használt rézhálózatot is, az új optikai hálózatot is be kell vezetnünk otthonába. A bekötésnél kollégáink maximálisan alkalmazkodnak az Ön igényihez, amennyire az fizikailag lehetséges. </p>
+    </ul>
+    </main>
     <footer></footer>
 </body>
 </html>
