--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <img src="img/logo.png" alt="Borsod Online">
     </header>
     <nav>
+        <button><i class="bi bi-list"></i></button>
         <div class="links">
             <p><a href="#" id="jelenlegi">Főoldal</a></p>
             <p><a href="html/tel.html">Kábel televízió</a></p>
             <p><a href="html/int.html">Internet</a></p>
             <p><a href="html/faq.html">Gyakori kérdések</a></p>
         </div>
-        <button><i class="bi bi-list"></i></button>
     </nav>
     <main>
         <h1>Cégünkről</h1>
@@ -53,6 +53,11 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h4>Források</h4>
+
+        <p><small>&copy; Ginál Zsolt, Zick Balázs 2022.</small></p>
+    </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
