--- a/html/faq.html
+++ b/html/faq.html
@@ -5,55 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="..img/poni.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
 <body>
     <header><img src="../img/logo.png" alt="Borsod Online"></header>
     <nav>
+        <button><i class="bi bi-list"></i></button>
         <div class="links">
             <p><a href="../index.html">Főoldal</a></p>
             <p><a href="tel.html">Kábel televízió</a></p>
             <p><a href="int.html">Internet</a></p>
             <p><a href="#" id="jelenlegi">Gyakori kérdések</a></p>
-            <button><i class="bi bi-list"></i></button>
         </div>
     </nav>
     <main>
         <h1>
             GYIK
         </h1>
-        <ul>
-
+        <ul class="qanda">
             <li> 
-                <h3>Ki végzi el a számítógép, illetve az internetkapcsolat beállítását?</h3>
-                <p>Amennyiben még nem vett igénybe internet szolgáltatást a Borsod Onlinetól, a létesítést végző kolléga első alkalommal segít elvégezni a szükséges alapbeállításokat. A számítógép és az internetkapcsolat további beállítását Ön tudja elvégezni. Amennyiben kérdése van, 1445-ös technikai ügyeletünk telefonszámán kollegáink készséggel állnak rendelkezésére. Honlapunkon pedig az alábbi linken tájékozódhat a beállításokkal kapcsolatban: xDSL. </p>
+                <span>Ki végzi el a számítógép, illetve az internetkapcsolat beállítását?<i class="bi bi-arrow-down-circle"></i></span>
+                <hr>
+                <div class="a1"><p>Amennyiben még nem vett igénybe internet szolgáltatást a Borsod Onlinetól, a létesítést végző kolléga első alkalommal segít elvégezni a szükséges alapbeállításokat. A számítógép és az internetkapcsolat további beállítását Ön tudja elvégezni. Amennyiben kérdése van, 1445-ös technikai ügyeletünk telefonszámán kollegáink készséggel állnak rendelkezésére. Honlapunkon pedig az alábbi linken tájékozódhat a beállításokkal kapcsolatban: xDSL. </p></div>
             </li>
             <li>
-                <h3>Mi a teendő műszaki probléma esetén?</h3>
-                <p>Technikai ügyeletünk a hét minden napján 24 órában áll rendelkezésére a 06303500420-ös telefonszámon (vezetékes- és  mobiltelefonról is díjmentesen hívható). </p>
+                <span>Mi a teendő műszaki probléma esetén?<i class="bi bi-arrow-down-circle"></i></span>
+                <hr>
+                <div class="a2"><p>Technikai ügyeletünk a hét minden napján 24 órában áll rendelkezésére a 06303500420-ös telefonszámon (vezetékes- és  mobiltelefonról is díjmentesen hívható). </p></div>
             </li>
             <li>
-                <h3>Szereléssel jár az ADSL szolgáltatás bekötése?</h3>
-                <p>Igen, a bekötés munkálatokkal jár, de a szerelők minden esetben az ügyfél kéréseit figyelembe véve végzik el az ADSL szolgáltatását létesítését. </p>
+                <span>Szereléssel jár az ADSL szolgáltatás bekötése?<i class="bi bi-arrow-down-circle"></i></span>
+                <hr>
+                <div class="a3"><p>Igen, a bekötés munkálatokkal jár, de a szerelők minden esetben az ügyfél kéréseit figyelembe véve végzik el az ADSL szolgáltatását létesítését. </p></div>
             </li>
             <li>
-                <h3>Mit tegyek, ha nem működik a távirányító?</h3>
-                <p>
-                    <ul>
-                        <li>Kezdje el káromkodás közben ütögetni az eszközt!</li>
-                        <li>Elképzelhető,hogy a távirányító nincs a vevőegységre (set-top-box) irányítva, kérjük,irányítsa rá! </li>
-                        <li>Érdemes leellenőrizni, hogy az elemek helyesen vannak-e betéve, és kicserélni, ha szükséges! </li>
-                    </ul>
-                </p>
+                <span>Mit tegyek, ha nem működik a távirányító?<i class="bi bi-arrow-down-circle"></i></span>
+                <hr>
+                <div class="a4">
+                    <p>
+                        <ol>
+                            <li>Kezdje el káromkodás közben ütögetni az eszközt!</li>
+                            <li>Elképzelhető,hogy a távirányító nincs a vevőegységre (set-top-box) irányítva, kérjük,irányítsa rá! </li>
+                            <li>Érdemes leellenőrizni, hogy az elemek helyesen vannak-e betéve, és kicserélni, ha szükséges! </li>
+                        </ol>
+                    </p>
+                </div>
             </li>
             <li>
-                <h3>Jár-e szereléssel, ha IPTV-szolgátatásról áttérek optikai hálózatra?</h3>
-                <p>Az optikai hálózat a rézhálózattól eltérően egy újabb, modernebb technológia. Ahogy a jelenleg használt rézhálózatot is, az új optikai hálózatot is be kell vezetnünk otthonába. A bekötésnél kollégáink maximálisan alkalmazkodnak az Ön igényihez, amennyire az fizikailag lehetséges. </p>
+                <span>Jár-e szereléssel, ha IPTV-szolgátatásról áttérek optikai hálózatra?<i class="bi bi-arrow-down-circle"></i></span>
+                <hr>
+                <div class="a5"><p>Az optikai hálózat a rézhálózattól eltérően egy újabb, modernebb technológia. Ahogy a jelenleg használt rézhálózatot is, az új optikai hálózatot is be kell vezetnünk otthonába. A bekötésnél kollégáink maximálisan alkalmazkodnak az Ön igényihez, amennyire az fizikailag lehetséges. </p></div>
             </li>
         </ul>
-
     </main>
     <footer></footer>
+    <script src="../js/app.js"></script>
 </body>
 </html>
