--- a/html/tel.html
+++ b/html/tel.html
@@ -5,23 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="..img/poni.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
     <title>Document</title>
 </head>
 <body>
 
     <header><img src="../img/logo.png" alt="Borsod Online"></header>
     <nav>
+        <button><i class="bi bi-list"></i></button>
         <div class="links">
             <p><a href="../index.html">Főoldal</a></p>
             <p><a href="#" id="jelenlegi">Kábel televízió</a></p>
             <p><a href="int.html">Internet</a></p>
             <p><a href="faq.html">Gyakori kérdések</a></p>
-            <button><i class="bi bi-list"></i></button>
         </div>
     </nav>
-    <main></main>
+    <main>
+        <h1>Kábeltévés szolgáltatásaink</h1>
+        <div>
+            <h3>Óvatos Duhaj</h3>
+            <p>Ajánluk, ha kevés, de jó minőségű csatornákat akarsz nézni jó áron!</p>
+            <ul>
+                <li>55 csatorna</li>
+                <li>21 HD csatorna</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Hoppy</h3>
+            <p>Ajánluk, ha a családod minden tagja szeretné a saját kedvére valót megtalálni.</p>
+            <ul>
+                <li>162 csatorna</li>
+                <li>51 HD csatorna</li>
+                <li>RTL Most+ hozzáférés</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Bivaly</h3>
+            <p></p>
+        </div>
+    </main>
     <footer></footer>
+    <script src="../js/app.js"></script>
 </body>
 </html>
