--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="Borsod, internet, kábeltv">
     <meta title="Borsod Online">
     <title>Borsod Online</title>
+    <link rel="shortcut icon" href="img/poni.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
@@ -41,15 +42,15 @@
         <div class="flex">
             <div class="imageover">
                 <img src="img/internet.png" alt=""> <!--https://videohive.net/item/abstract-matrix-green-digital-internet-social-network-background-/22690788-->
-                <div><a href="">Internet</a></div>
+                <div><a href="html/int.html">Internet</a></div>
             </div>
             <div class="imageover">
                 <img src="img/borsodi_szitu.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fliving-room-tv&psig=AOvVaw2pybXiendQ6UX1MPl7HCFG&ust=1649315144765000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLikxenv_vYCFQAAAAAdAAAAABAE-->
-                <div><a href="">Televízió</a></div>
+                <div><a href="html/tel.html">Televízió</a></div>
             </div>
             <div class="imageover">
                 <img src="img/faq.jpg" alt=""> <!--https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fsearch%2Ffaq&psig=AOvVaw0ndxIwCnsT1jsDcydmLAQT&ust=1649317159591000&source=images&cd=vfe&ved=0CAcQjRxqFwoTCLCug6r3_vYCFQAAAAAdAAAAABAL-->
-                <div><a href="">GyIK</a></div>
+                <div><a href="html/faq.html">GyIK</a></div>
             </div>
         </div>
     </main>
