--- a/html/tel.html
+++ b/html/tel.html
@@ -21,7 +21,7 @@
             <p><a href="faq.html">Gyakori kérdések</a></p>
         </div>
     </nav>
-    <main>
+    <main class="container_flex_tv_internet">
         <h1>Kábeltévés szolgáltatásaink</h1>
         <div>
             <h3>Óvatos Duhaj</h3>
@@ -42,7 +42,13 @@
         </div>
         <div>
             <h3>Bivaly</h3>
-            <p></p>
+            <p>Igazi Borsodi szitu kedvelőinek ajánljuk, csak akkor vedd meg, ha sorsod tényleg Borsod!</p>
+            <ul>
+                <li>162 csatorna</li>
+                <li>51 HD csatorna</li>
+                <li>RTL Most+ hozzáférés</li>
+                <li>Borsodi MoziKlub hozzáférés</li>
+            </ul>
         </div>
     </main>
     <footer></footer>
