--- a/html/faq.html
+++ b/html/faq.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="..img/poni.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/poni.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title>Document</title>
 </head>
@@ -26,22 +26,22 @@
         </h1>
         <ul class="qanda">
             <li> 
-                <span>Ki végzi el a számítógép, illetve az internetkapcsolat beállítását?<i class="bi bi-arrow-down-circle"></i></span>
+                <span class="question">Ki végzi el a számítógép, illetve az internetkapcsolat beállítását?<i class="bi bi-arrow-down-circle"></i></span>
                 <hr>
                 <div class="a1"><p>Amennyiben még nem vett igénybe internet szolgáltatást a Borsod Onlinetól, a létesítést végző kolléga első alkalommal segít elvégezni a szükséges alapbeállításokat. A számítógép és az internetkapcsolat további beállítását Ön tudja elvégezni. Amennyiben kérdése van, 1445-ös technikai ügyeletünk telefonszámán kollegáink készséggel állnak rendelkezésére. Honlapunkon pedig az alábbi linken tájékozódhat a beállításokkal kapcsolatban: xDSL. </p></div>
             </li>
             <li>
-                <span>Mi a teendő műszaki probléma esetén?<i class="bi bi-arrow-down-circle"></i></span>
+                <span class="question">Mi a teendő műszaki probléma esetén?<i class="bi bi-arrow-down-circle"></i></span>
                 <hr>
                 <div class="a2"><p>Technikai ügyeletünk a hét minden napján 24 órában áll rendelkezésére a 06303500420-ös telefonszámon (vezetékes- és  mobiltelefonról is díjmentesen hívható). </p></div>
             </li>
             <li>
-                <span>Szereléssel jár az ADSL szolgáltatás bekötése?<i class="bi bi-arrow-down-circle"></i></span>
+                <span class="question">Szereléssel jár az ADSL szolgáltatás bekötése?<i class="bi bi-arrow-down-circle"></i></span>
                 <hr>
                 <div class="a3"><p>Igen, a bekötés munkálatokkal jár, de a szerelők minden esetben az ügyfél kéréseit figyelembe véve végzik el az ADSL szolgáltatását létesítését. </p></div>
             </li>
             <li>
-                <span>Mit tegyek, ha nem működik a távirányító?<i class="bi bi-arrow-down-circle"></i></span>
+                <span class="question">Mit tegyek, ha nem működik a távirányító?<i class="bi bi-arrow-down-circle"></i></span>
                 <hr>
                 <div class="a4">
                     <p>
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li>
-                <span>Jár-e szereléssel, ha IPTV-szolgátatásról áttérek optikai hálózatra?<i class="bi bi-arrow-down-circle"></i></span>
+                <span class="question">Jár-e szereléssel, ha IPTV-szolgátatásról áttérek optikai hálózatra?<i class="bi bi-arrow-down-circle"> </i></span>
                 <hr>
                 <div class="a5"><p>Az optikai hálózat a rézhálózattól eltérően egy újabb, modernebb technológia. Ahogy a jelenleg használt rézhálózatot is, az új optikai hálózatot is be kell vezetnünk otthonába. A bekötésnél kollégáink maximálisan alkalmazkodnak az Ön igényihez, amennyire az fizikailag lehetséges. </p></div>
             </li>
