--- a/html/faq.html
+++ b/html/faq.html
@@ -60,7 +60,11 @@
             </li>
         </ul>
     </main>
-    <footer></footer>
+    <footer>
+        <p><small>&copy; Ginál Zsolt, Zick Balázs 2022.</small></p>
+        <h4>Források</h4>
+        <p><a href="https://www.invitel.hu/ugyfelszolgalat/gyik.html">Invitel</a></p>
+    </footer>
     <script src="../js/app.js"></script>
 </body>
 </html>
