--- a/html/int.html
+++ b/html/int.html
@@ -20,33 +20,41 @@
             <p><a href="faq.html">Gyakori kérdések</a></p>
         </div>
     </nav>
-    <main class="container_flex_tv_internet">
-        <div>
-            <h4>Kukoricamentes</h4>
-            <h5><b>5990 Ft</b> /hó</h5>
-            <p>1000 Mbit/s max. letöltési sebesség
-                A gigabit sebességgel akár 10+ eszközön (pl. mobiltelefon, laptop, tablet) élvezhetitek a 4K videókat, HD streaminget (pl. Netflix, HBO Max), online játékokat vagy gyors letöltést!</p>
-            <h6>Wifi modem</h6>
-            <p>a csomag tartalmazza az internetedhez megfelelő Wifi modemet</p>
-        </div>
-        <div>
-            <h4>Hideg Komlós</h4>
-            <h5><b>4990 Ft </b>/hó</h5>
-            <p>500 Mbit/s max. letöltési sebesség
-                Egyszerre többen, több eszközről (pl. mobiltelefon, laptop, tablet) is élvezhetitek a HD felbontású videókat, HD streaminget (pl. Netflix, HBO Max) vagy online játékokat!</p>
-            <h6>Wifi modem</h6>
-            <p>a csomag tartalmazza az internetedhez megfelelő Wifi modemet</p>
-        </div>
-        <div>
-            <h4>Búza</h4>
-            <h5><b>3990 Ft </b>/hó</h5>
-            <p>250 Mbit/s max. letöltési sebesség
-                Ajánlott munkához, tanuláshoz, mindennapi böngészéshez és online HD videókhoz (pl. YouTube), ha egyszerre csak pár eszközt (pl. mobiltelefon, laptop, tablet) használsz.</p>
-            <h6>Wifi modem</h6>
-            <p>a csomag tartalmazza az internetedhez megfelelő Wifi modemet</p>
+    <main >
+        <h1>Internetes szolgáltatásaink</h1>
+        <div class="container_flex_tv_internet">
+            <div>
+                <h3>Kukoricamentes</h3>
+                <h4></h4>
+                <p>A gigabit sebességgel akár 10+ eszközön (pl. mobiltelefon, laptop, tablet) élvezhetitek a 4K videókat, HD streaminget (pl. Netflix, HBO Max), online játékokat vagy gyors letöltést!</p>
+                <ul>
+                    <li><b>5990 Ft</b> /hó</li>
+                    <li>1000 Mbit/s max. letöltési sebesség</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Hideg Komlós</h3>
+                <p>Egyszerre többen, több eszközről (pl. mobiltelefon, laptop, tablet) is élvezhetitek a HD felbontású videókat, HD streaminget (pl. Netflix, HBO Max) vagy online játékokat!</p>
+                <ul>
+                    <li><b>4990 Ft </b>/hó</li>
+                    <li>500 Mbit/s max. letöltési sebesség</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Búza</h3>
+                <p>Ajánlott munkához, tanuláshoz, mindennapi böngészéshez és online HD videókhoz (pl. YouTube), ha egyszerre csak pár eszközt (pl. mobiltelefon, laptop, tablet) használsz.</p>
+                <ul>
+                    <li><b>3990 Ft</b>/hó</li>
+                    <li>250 Mbit/s max. letöltési sebesség</li>
+                </ul>
+            </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p><small>&copy; Ginál Zsolt, Zick Balázs 2022.</small></p>
+        <h4>Források</h4>
+        <p><a href="https://www.vodafone.hu/otthoni-szolgaltatasok?c_source=google&c_medium=cpc&c_name=hu_22_ao_p_x_e_i_d_perform.fixed.acq.search.prospect.brand.home&s_kwcid=AL%2111997%213%21585881532231%21e%21%21g%21%21vodafone%20internet&gclid=EAIaIQobChMIqY-F_c-Q9wIVGYfVCh23sQWhEAAYASAAEgLPQvD_BwE">Vodafone</a></p>
+    </footer>
     <script src="../js/app.js"></script>
 </body>
 </html>
