--- a/html/tel.html
+++ b/html/tel.html
@@ -21,37 +21,43 @@
             <p><a href="faq.html">Gyakori kérdések</a></p>
         </div>
     </nav>
-    <main class="container_flex_tv_internet">
+    <main>
         <h1>Kábeltévés szolgáltatásaink</h1>
-        <div>
-            <h3>Óvatos Duhaj</h3>
-            <p>Ajánluk, ha kevés, de jó minőségű csatornákat akarsz nézni jó áron!</p>
-            <ul>
-                <li>55 csatorna</li>
-                <li>21 HD csatorna</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Hoppy</h3>
-            <p>Ajánluk, ha a családod minden tagja szeretné a saját kedvére valót megtalálni.</p>
-            <ul>
-                <li>162 csatorna</li>
-                <li>51 HD csatorna</li>
-                <li>RTL Most+ hozzáférés</li>
-            </ul>
-        </div>
-        <div>
-            <h3>Bivaly</h3>
-            <p>Igazi Borsodi szitu kedvelőinek ajánljuk, csak akkor vedd meg, ha sorsod tényleg Borsod!</p>
-            <ul>
-                <li>162 csatorna</li>
-                <li>51 HD csatorna</li>
-                <li>RTL Most+ hozzáférés</li>
-                <li>Borsodi MoziKlub hozzáférés</li>
-            </ul>
+        <div class="container_flex_tv_internet">
+            <div>
+                <h3>Óvatos Duhaj</h3>
+                <p>Ajánluk, ha kevés, de jó minőségű csatornákat akarsz nézni jó áron!</p>
+                <ul>
+                    <li>55 csatorna</li>
+                    <li>21 HD csatorna</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Hoppy</h3>
+                <p>Ajánluk, ha a családod minden tagja szeretné a saját kedvére valót megtalálni.</p>
+                <ul>
+                    <li>162 csatorna</li>
+                    <li>51 HD csatorna</li>
+                    <li>RTL Most+ hozzáférés</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Bivaly</h3>
+                <p>Igazi Borsodi szitu kedvelőinek ajánljuk, csak válaszd meg, ha sorsod tényleg Borsod!</p>
+                <ul>
+                    <li>162 csatorna</li>
+                    <li>51 HD csatorna</li>
+                    <li>RTL Most+ hozzáférés</li>
+                    <li>Borsodi SzituKlub hozzáférés</li>
+                </ul>
+            </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p><small>&copy; Ginál Zsolt, Zick Balázs 2022.</small></p>
+        <h4>Források</h4>
+        <p><a href="https://www.telekom.hu/lakossagi/szolgaltatasok/televizio/telekom-tv-uj#inwb_tkom_dijcsomagok">Telekom</a></p>
+    </footer>
     <script src="../js/app.js"></script>
 </body>
 </html>
