--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <main>
         <h1>Cégünkről</h1>
         <p><q>Borsodi szitu, ha elmegy a neted.</q></p>
-        <p>Ha sorsod Borsod és egy megfizethető valamint megbízható szolgáltatóra van szükséged, a Borsod Online a legjobb választásod! Cégünk kimagasló minőségben nyújt kábel és digitális TV szolgéltatást, valamint a szélessávú internetcsomagjaink már üvegszál optikán is elérhetőek a zökkenőmentes fel- és letöltés érdekében. </p>
+        <p>Ha sorsod Borsod és egy megfizethető, valamint megbízható szolgáltatóra van szükséged, a Borsod Online a legjobb választásod! Cégünk kimagasló minőségben nyújt kábel és digitális TV szolgáltatást, valamint szélessávú internetcsomagjaink már üvegszál optikán is elérhetőek a zökkenőmentes fel-, és letöltés érdekében. </p>
         <ul>
             <li>Rézszálas És Üvegszál optikás internet szolgáltatás</li>
             <li>Analóg és Digitális Kábeltelevízió</li>
             <li>24/7 Ügyfélszolgálat</li>
-            <li>Hiba esetén 3 órán bellüli javítási idő</li>
+            <li>Hiba esetén 3 órán belüli javítási idő</li>
 
         </ul>
         <hr>    
@@ -55,9 +55,13 @@
         </div>
     </main>
     <footer>
-        <h4>Források</h4>
-
         <p><small>&copy; Ginál Zsolt, Zick Balázs 2022.</small></p>
+        <h4>Források</h4>
+        <ul>
+            <li><a href="https://s3.envato.com/files/3a1f26c4-7ec1-4f44-beb9-c7d320a4c893/inline_image_preview.jpg">Internet</a></li>
+            <li><a href="https://www.istockphoto.com/hu/fot%C3%B3/tv-makett-a-nappaliban-%C3%A9jjel-tv-k%C3%A9perny%C5%91-tv-szekr%C3%A9ny-sz%C3%A9kek-k%C3%B6nyvespolc-gm1146517858-308958436">Televízió</a></li>
+            <li><a href="">GyIK</a></li>
+        </ul>
     </footer>
     <script src="js/app.js"></script>
 </body>
